--- a/package.json
+++ b/package.json
@@ -10,11 +10,16 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@apollo/client": "^3.5.6",
+    "apollo-link-http": "^1.5.17",
+    "graphql": "^16.2.0",
+    "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/drawer": "^6.1.8",
     "@react-navigation/material-bottom-tabs": "^6.0.9",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.2.5",
     "expo": "~44.0.0",
+    "expo-linking": "~3.0.0",
     "expo-status-bar": "~1.2.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
@@ -26,7 +31,7 @@
     "react-native-screens": "~3.10.1",
     "react-native-vector-icons": "^9.0.0",
     "react-native-web": "0.17.1",
-    "expo-linking": "~3.0.0"
+    "react-native-dotenv": "^3.3.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
